--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.trusolve.atlassian.bamboo</groupId>
-    <artifactId>LabelExpirationTask</artifactId>
+    <groupId>com.trusolve.atlassian.bamboo.plugins</groupId>
+    <artifactId>LabelExpiration</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <organization>
@@ -14,7 +14,7 @@
         <url>http://www.trusolve.com</url>
     </organization>
 
-    <name>LabelExpirationTask</name>
+    <name>LabelExpiration</name>
     <description>This is the com.trusolve.atlassian.bamboo:LabelExpirationTask plugin for Atlassian Bamboo.</description>
     <packaging>atlassian-plugin</packaging>
 
