--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.trusolve.atlassian.bamboo.plugins</groupId>
     <artifactId>LabelExpiration</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
 
     <organization>
         <name>TruSolve LLC</name>
